--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Using nodejs, express.js & MongoDB ",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "set NODE_ENV=production&& nodemon server.js"
+
   },
   "author": "Prohallad",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "morgan": "^1.10.1"
   }
