--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Prohallad",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "mongoose": "^5.13.23",
