--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
