--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "natours",
   "version": "1.0.0",
   "description": "Using nodejs, express.js & MongoDB ",
-  "main": "app.js",
+  "main": "server.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
